@@ -7,6 +7,7 @@ Roundcube Webmail ContextMenu
  * Improve menu element parsing, allow for popup menu functions in skin
  * Add new event submenu_toggle to handle display of hidden menus
  * Disable right click on context menu
+ * Depreciate right-arrow class, use sub-button instead
 
  * Remove special handling for group-create/rename (requires roundcube rev ec98aa5)
  * "Flattened" the larry theme: fresher look by removing shadows and gradients
